# inventory-subsystem

./: .gitignore  404.html  CMakeLists.txt  README.md  index.html  main.cpp  mkdocs.yml
docs/: index.md
include/: grid.hpp
include/slot/: slot.hpp
src/: CMakeLists.txt  grid.cpp
src/slot/: CMakeLists.txt  slot.cpp
